updated swagger 3 code
