# lib/module/v1/user/userRoute.js
@@ -50,16 +50,30 @@ usrRoutr.route("/guest-login")
 usrRoutr.route('/updateProfile')
     .post([middleware.authenticate.autntctTkn],function (req,res){
         let { name,username } = req.body;
+        console.log("ROUUTE",req.body);
         let { user } = req;
         usrFacade.updateProfile({
            name,username,user
         }).then(function (result){
             resHndlr.sendSuccess(res, result, req);
-        }).catch(function (res){
-            console.log(":::ROUTE::::",res);
+        }).catch(function (err){
             resHndlr.sendError(res,err,req)
         })
 });
+
+
+usrRoutr.route('/getProfile')
+    .get([middleware.authenticate.autntctTkn],function (req,res){
+        let { user } = req;
+        usrFacade.getProfile({user})
+        .then(function (result){
+            resHndlr.sendSuccess(res, result, req);
+        }).catch(function (err){
+            resHndlr.sendError(res, err, req)
+        })
+});
+
+
 
 
 module.exports = usrRoutr;
